# Free-Claude-Code

./: .gitignore  README.md  pyproject.toml  server.py
api/: __init__.py  app.py  dependencies.py  routes.py
config/: env.example  settings.py
providers/: __init__.py  gemini.py  openai_compat.py
providers/common/: message_converter.py  sse_builder.py
